--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3307/sell-ecom
 spring.datasource.username=sps_user
 spring.datasource.password=sps_pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.sql.init.mode=always
