--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,4 +3,10 @@ spring.datasource.username=sps_user
 spring.datasource.password=sps_pass
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-spring.sql.init.mode=always
+spring.sql.init.mode=never
+
+server.port=8090
+
+jwt.private.key=classpath:app.key
+
+jwt.public.key=classpath:app.pub
