--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,12 +1,17 @@
-spring.datasource.url=jdbc:mysql://localhost:3307/sell-ecom
-spring.datasource.username=sps_user
-spring.datasource.password=sps_pass
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.sql.init.mode=never
-
 server.port=8090
 
 jwt.private.key=classpath:app.key
 
 jwt.public.key=classpath:app.pub
+
+
+# Mail properties
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=${SUPPORT_EMAIL}
+spring.mail.password=${APP_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
+
+spring.config.import=optional:file:.env[.properties]
