--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,5 +13,13 @@ spring.mail.password=${APP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
+spring.sql.init.mode=never
+
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-version=1
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
 
 spring.config.import=optional:file:.env[.properties]
