--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -13,5 +13,15 @@ spring.mail.password=${APP_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
+spring.sql.init.mode=never
 
 spring.config.import=optional:file:.env[.properties]
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-version=1
+spring.flyway.locations=classpath:db/migration
+spring.flyway.url=jdbc:mysql://127.0.0.1:3307/sell-ecom
+spring.flyway.user=sps_user
+spring.flyway.password=sps_pass
+spring.flyway.baseline-on-migrate=true
