--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.8.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
@@ -171,13 +175,13 @@
 				<artifactId>flyway-maven-plugin</artifactId>
 				<version>10.20.1</version>
 				<configuration>
-                <url>jdbc:mysql://localhost:3307/sell-ecom</url>
-                <user>sps_user</user>
-                <password>sps_pass</password>
-                <baselineOnMigrate>true</baselineOnMigrate>
-				<cleanDisabled>false</cleanDisabled>
-                <locations>filesystem:src/main/resources/db/migration</locations>
-            </configuration>
+					<url>jdbc:mysql://localhost:3307/sell-ecom</url>
+					<user>sps_user</user>
+					<password>sps_pass</password>
+					<baselineOnMigrate>true</baselineOnMigrate>
+					<cleanDisabled>false</cleanDisabled>
+					<locations>filesystem:src/main/resources/db/migration</locations>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
