--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,8 @@ spring.mail.properties.mail.debug=true
 spring.sql.init.mode=never
 
 
+# Docs
+
 # Flyway
 spring.flyway.enabled=true
 spring.flyway.baseline-version=1
