--- a/.example.env
+++ b/.example.env
@@ -1,5 +1,10 @@
-
 # MAIL PROPERTIES  
 SUPPORT_EMAIL=
 APP_PASSWORD=
 
+# DATABASE CREDENTIALS
+DB_NAME=
+DB_USERNAME=
+DB_PASSWORD=
+DB_PORT=
+DB_HOST=localhost
