--- a/compose.yaml
+++ b/compose.yaml
@@ -1,13 +1,34 @@
+version: "3.8"
 services:
-  ecom-mysql:
+  database:
     image: 'mysql:8.1'
-    container_name: "sell-ecom"
+    container_name: mysql_container
+    restart: always
     environment:
-      - 'MYSQL_DATABASE=sell-ecom'
-      - 'MYSQL_USER=sps_user'
-      - 'MYSQL_PASSWORD=sps_pass'
-      - 'MYSQL_ROOT_PASSWORD=sps_pass'
+      - MYSQL_DATABASE=${DB_NAME}
+      - MYSQL_USER=${DB_USERNAME}
+      - MYSQL_PASSWORD=${DB_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
     ports:
-      - '3307:3306'
-    expose:
-      - "3307"
+      - '3306:3306'
+    networks:
+      - econ-network
+
+  spring-app:
+    container_name: spring_boot_app
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: always
+    env_file:
+      - .env
+    depends_on:
+      - database
+    ports:
+      - "8090:8080"
+    networks:
+      - econ-network
+
+networks:
+  econ-network:
+    driver: bridge
