--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,24 @@
-server.port=8090
-
 jwt.private.key=classpath:app.key
 
 jwt.public.key=classpath:app.pub
 
+#Db
+spring.docker.compose.enabled=false
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Properties
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+
+# Flyway
+spring.flyway.enabled=true
+spring.flyway.baseline-version=1
+spring.flyway.baseline-on-migrate=true
+spring.flyway.locations=classpath:db/migration
 
 # Mail properties
 spring.mail.host=smtp.gmail.com
@@ -15,13 +30,5 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
 spring.sql.init.mode=never
 
-
 # Docs
-
-# Flyway
-spring.flyway.enabled=true
-spring.flyway.baseline-version=1
-spring.flyway.baseline-on-migrate=true
-spring.flyway.locations=classpath:db/migration
-
 spring.config.import=optional:file:.env[.properties]
